--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
@@ -15,7 +15,7 @@
     justify-content: space-between;
     height:  3em;
     padding: 0 1em;
-    background-color: #0F1213;
+    background-color: var(--black);
     border-bottom: 1px solid var(--grey);
 
     & button {
