--- a/ui/controls/inspector-option.reel/_inspector-option.css
+++ b/ui/controls/inspector-option.reel/_inspector-option.css
@@ -2,8 +2,8 @@
     outline: none;
 
     & > * {
-        border-top:     1px solid rgba(255,255,255,.2);
-        border-bottom:  1px solid rgba(255,255,255,.2);
+        border-top:     1px solid var(--transparent--lighten);
+        border-bottom:  1px solid var(--transparent--lighten);
     }
 
     &:only-of-type .ListItem {
@@ -11,7 +11,7 @@
     }
 
     &.selected > * {
-        border-color: #00A7FF;
+        border-color: var(--color-selected);
     }
 }
 
