--- a/ui/controls/interface-overview.reel/_interface-overview.css
+++ b/ui/controls/interface-overview.reel/_interface-overview.css
@@ -3,7 +3,7 @@
     margin-top: 0;
     padding-bottom: 1em;
     margin-bottom: 1em;
-    border-bottom: 1px solid rgba(255,255,255,.15);
+    border-bottom: 1px solid var(--transparent--lighten);
 }
 
 .InterfaceOverview-icon {
@@ -15,7 +15,7 @@
 }
 
 .InterfaceOverview-icon svg {
-    color: #ccc;
+    color: var(--grey-2);
     width: 100%;
 }
 
