--- a/ui/controls/list.reel/list-item.reel/_list-item.css
+++ b/ui/controls/list.reel/list-item.reel/_list-item.css
@@ -9,8 +9,8 @@
     cursor: pointer;
     overflow: hidden;
     position: relative;
-    border-top:     1px solid rgba(255,255,255,.2);
-    border-bottom:  1px solid rgba(255,255,255,.2);
+    border-top:     1px solid var(--transparent--lighten);
+    border-bottom:  1px solid var(--transparent--lighten);
     background-color: var(--grey-blue);
     transition: background-color .25s, color .25s, border-color .25s;
 
