--- a/ui/inspectors/calendar.reel/_calendar.css
+++ b/ui/inspectors/calendar.reel/_calendar.css
@@ -17,7 +17,7 @@
 }
 
 .Calendar-events-header {
-    border-bottom: 1px solid rgba(255,255,255,.2);
+    border-bottom: 1px solid var(--transparent--lighten);
     flex-shrink: 0;
     padding-bottom: .25em;
 }
