--- a/ui/inspectors/services-category.reel/services-category-overview.reel/_services-category-overview.css
+++ b/ui/inspectors/services-category.reel/services-category-overview.reel/_services-category-overview.css
@@ -4,7 +4,7 @@
     margin-top: 0;
     padding: 1em;
     border-bottom: 1px solid rgba(255,255,255,.15);
-    background-color: #E0E5E5;
+    background-color: var(--grey-3);
     color: var(--main-bg-color);
 }
 
@@ -17,7 +17,7 @@
 }
 
 .ServicesCategoryOverview-icon svg {
-    color: #ccc;
+    color: var(--grey-2);
     width: 100%;
 }
 
