--- a/ui/sections/network/inspectors/overview.reel/_overview.css
+++ b/ui/sections/network/inspectors/overview.reel/_overview.css
@@ -28,7 +28,7 @@
 }
 
 .Overview-disabledInterface:nth-child(even) {
-    background: rgba(0,0,0,.05);
+    background: var(--transparent--darken);
 }
 
 /* Foldable Section Overriedes */
