--- a/ui/controls/topology.reel/topology-dropzone.reel/_topology-dropzone.css
+++ b/ui/controls/topology.reel/topology-dropzone.reel/_topology-dropzone.css
@@ -29,7 +29,7 @@
         right:  0;
         bottom: 0;
         border: 1px dashed currentColor;
-        background-image: repeating-linear-gradient(-45deg, rgba(43,156,216,0.2), rgba(43,156,216,0.2) 1px, transparent 1px, transparent 10px);
+        background-image: repeating-linear-gradient(-45deg, color(var(--color-selected) a(20%)), color(var(--color-selected) a(20%)) 1px, transparent 1px, transparent 10px);
         background-size: 28px 28px;
     }
 
@@ -41,7 +41,7 @@
     }
 
     &.willAcceptDrop:before {
-        border: 1px dashed rgba(43,156,216,1);
+        border: 1px dashed var(--color-selected);
         animation: blink 1s infinite ease;
     }
 
@@ -51,8 +51,8 @@
     }
 
     &.acceptDrop:before {
-        border: 1px dashed rgba(43,156,216,1);
-        background-image: repeating-linear-gradient(-45deg, rgba(43,156,216,0.75), rgba(43,156,216,0.75) 1px, transparent 1px, transparent 10px);
+        border: 1px dashed var(--color-selected);
+        background-image: repeating-linear-gradient(-45deg, color(var(--color-selected) a(75%)), color(var(--color-selected) a(75%)) 1px, transparent 1px, transparent 10px);
         background-size: 28px 28px;
         background-color: rgba(43,156,216,0.1);
     }
@@ -60,7 +60,7 @@
     &.acceptDrop:after {
         color: var(--white);
         box-shadow: 0 0 0 1px #1E963F,
-                    0 2px 2px rgba(0,0,0,.3);
+                    0 2px 2px var(--transparent--darken);
         background: #1E963F;
     }
 }
