--- a/ui/controls/topology.reel/vdev.reel/_vdev.css
+++ b/ui/controls/topology.reel/vdev.reel/_vdev.css
@@ -15,13 +15,13 @@
 
     &.willAcceptDrop:before {
         animation: blink 1s infinite ease;
-        border: 1px dashed rgba(43,156,216,1);
+        border: 1px dashed var(--color-selected);
     }
 
     &.acceptDrop:before {
-        background-image: repeating-linear-gradient(-45deg, rgba(43,156,216,0.75), rgba(43,156,216,0.75) 1px, transparent 1px, transparent 10px);
+        background-image: repeating-linear-gradient(-45deg, color(var(--color-selected) a(75%)), color(var(--color-selected) a(75%)) 1px, transparent 1px, transparent 10px);
         background-size: 28px 28px;
-        border: 1px dashed rgba(43,156,216,1);
+        border: 1px dashed var(--color-selected);
     }
 }
 
@@ -53,7 +53,7 @@
     background: #282b2b;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    box-shadow: 0 1px 1px rgba(0,0,0,.3);
+    box-shadow: 0 1px 1px var(--shadow-1);
 
     /* hacky magic number to space single drive at container center */
 
