--- a/ui/controls/tree-view.reel/_tree-view.css
+++ b/ui/controls/tree-view.reel/_tree-view.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #000;
-    background: #0F1213;
+    background: var(--black);
     color: var(--white);
 }
 
@@ -74,7 +74,7 @@
     display: flex;
     justify-content: space-between;
     padding: .5em;
-    background: #0F1213;
+    background: var(--black);
     border-top: 1px solid #000;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
