--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -23,8 +23,8 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    background-color: #0f1213;
-    text-shadow: 0 1px rgba(0,0,0,.2);
+    background-color: var(--black);
+    text-shadow: 0 1px var(--shadow-1);
     font-weight: 400;
 }
 
@@ -44,7 +44,7 @@
     background-color: #1E9440;
     color: var(--grey-3);
     background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.15));
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.2);
+    box-shadow: inset 0 1px 0 var(--shadow-1);
     transition: background-color .25s;
 
     &:hover { background-color: #0E722B; }
@@ -121,7 +121,7 @@
     padding: 0 1em;
     display: flex;
     align-items: center;
-    background: #404040;
+    background: var(--grey);
 
     & .montage-Slot {
         flex: 1;
