--- a/ui/dashboard/notifications.reel/_notifications.css
+++ b/ui/dashboard/notifications.reel/_notifications.css
@@ -9,7 +9,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    background-color: #404040;
+    background-color: var(--grey);
     padding: .5em;
     border-top-right-radius: 2px;
     border-top-left-radius:  2px;
