--- a/ui/dashboard/notifications.reel/notification-details.reel/_notification-details.css
+++ b/ui/dashboard/notifications.reel/notification-details.reel/_notification-details.css
@@ -17,7 +17,7 @@
 
 .Notification-details-title {
     display: block;
-    color: #939E9F;
+    color: var(--grey-1);
     font-weight: bold;
 
     &:not(:empty) { margin: .5rem; }
