--- a/ui/dashboard/widgets/widget-wrapper.reel/_widget-wrapper.css
+++ b/ui/dashboard/widgets/widget-wrapper.reel/_widget-wrapper.css
@@ -42,7 +42,7 @@
     border-radius: 50%;
     padding: .5rem;
     color: var(--white);
-    box-shadow: 0 2px 2px 1px rgba(0,0,0,.3);
+    box-shadow: 0 2px 2px 1px var(--shadow-1);
     visibility: hidden;
     transform: scale(0);
     transition: transform .25s ease-in-out, visibility .25s ease-in-out;
