--- a/ui/drawer.reel/drawer-item.reel/_drawer-item.css
+++ b/ui/drawer.reel/drawer-item.reel/_drawer-item.css
@@ -14,8 +14,8 @@
     padding: .75em;
     height: 2.5em;
     line-height: 1em;
-    background: #404040;
-    color: #e0e5e5;
+    background: var(--grey);
+    color: var(--grey-3);
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -23,11 +23,11 @@
 .DrawerItem-infoToggle {
     width:  2em;
     height: 2em;
-    color: color(#e0e5e5 blackness(50%));
+    color: color(var(--grey-3) blackness(50%));
     transition: color .2s ease-in-out;
 
     &:hover {
-        color: #e0e5e5;
+        color: var(--grey-3);
     }
 }
 
@@ -39,7 +39,7 @@
     overflow: hidden;
     border-bottom-left-radius:  4px;
     border-bottom-right-radius: 4px;
-    border: 2px solid #404040;
+    border: 2px solid var(--grey);
     border-top: none;
 }
 
