--- a/ui/icons/disk.reel/_disk.css
+++ b/ui/icons/disk.reel/_disk.css
@@ -25,7 +25,7 @@
         border: 1px solid transparent;
     }
 
-    &:hover:before { border: 1px solid #939E9F; }
+    &:hover:before { border: 1px solid var(--grey-1); }
 
     @nest .selected &:before { border: 1px solid var(--color-selected); }
 
