--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/_calendar-widget-day.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/_calendar-widget-day.css
@@ -14,11 +14,11 @@
 
 .CalendarWidgetDay-Sunday,
 .CalendarWidgetDay-Saturday {
-    background-color: #1E2123;
+    background-color: var(--grey);
 }
 
 .CalendarWidgetDay-otherMonth {
-    background-color: #272A2D;
+    background-color: var(--grey-blue-1);
     cursor: inherit;
 }
 
@@ -29,8 +29,8 @@
 }
 
 .CalendarWidgetDay-today {
-    background: #2e3032;
-    box-shadow: 0 0 8px 2px rgba(0,0,0,.2);
+    background: var(--grey);
+    box-shadow: 0 0 8px 2px var(--transparent--darken);
 }
 
 .CalendarWidgetDay-today:before {
@@ -40,11 +40,11 @@
     left:   -1px;
     right:  -1px;
     bottom: -1px;
-    border: 1px solid #3B4042;
+    border: 1px solid var(--grey-blue-2);
 }
 
 .CalendarWidgetDay-today .CalendarWidgetDay-date {
-    color: #E0E5E5;
+    color: var(--grey-3);
 }
 
 .CalendarWidgetDay-content {
@@ -67,8 +67,8 @@
         border: 1px dashed currentColor;
 
         @nest .acceptDrop & {
-            border: 1px dashed rgba(43,156,216,1);
-            background-color: rgba(43,156,216,0.1);
+            border: 1px dashed var(--green);
+            background-color:  color(var(--green) a(10%));
         }
 
         @nest .willAcceptDrop & {
@@ -78,23 +78,21 @@
 
         @nest .acceptDrop & {
             display: block;
-            border: 1px solid rgba(43,156,216,1);
+            border: 1px solid var(--green);
         }
     }
 
     @nest .CalendarWidgetDay.show-more & {
         bottom: auto;
-        box-shadow: 0 0 0 1px rgba(255,255,255,.2), 0 4px 10px 4px rgba(0,0,0,.9);
+        box-shadow: 0 0 0 1px var(--transparent--lighten), 0 4px 10px 4px color(var(--black) a(90%));
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
-        background-color: #1e1f20;
+        background-color: var(--grey-blue);
     }
 
 }
 
-.CalendarWidgetDay-otherMonth .CalendarWidgetDay-content {
-    display: none;
-}
+.CalendarWidgetDay-otherMonth .CalendarWidgetDay-content { display: none; }
 
 .CalendarWidgetDayContent-moreButton.Button {
     display: none;
