--- a/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/_task-notification.css
+++ b/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/_task-notification.css
@@ -7,11 +7,11 @@
     bottom: 0;
 }
 
-.TaskNotification.has-warning:before    { background-color: #D95B1B; }
+.TaskNotification.has-warning:before    { background-color: var(--orange); }
 .TaskNotification.has-error:before      { background-color: var(--red); }
 
 .TaskNotification.has-success .Notification-progress .Progress-bar  { background-color: #1E963F; }
-.TaskNotification.has-warning .Notification-progress .Progress-bar  { background-color: #D95B1B; }
+.TaskNotification.has-warning .Notification-progress .Progress-bar  { background-color: var(--orange); }
 .TaskNotification.has-error .Progress-wrapper                       { background-color: var(--red); }
 
 .TaskNotification.is-expired {
