--- a/ui/controls/button-group.reel/_button-group.css
+++ b/ui/controls/button-group.reel/_button-group.css
@@ -6,7 +6,7 @@
 .ButtonGroup-option {
     display: inline-block;
     font-family: 'lato', 'Helvetica Neue', 'Helvetica', sans-serif;
-    background-color: #bcbcbc;
+    background-color: var(--grey-2);
     border-right: 1px solid;
     border-bottom: 1px solid;
     border-color: var(--grey-2);
@@ -21,7 +21,7 @@
 }
 
 .ButtonGroup-option:hover {
-    background: #d7d7d7;
+    background-color: var(--grey-3);
 }
 
 .ButtonGroup-option:first-child {
@@ -31,10 +31,10 @@
 }
 
 .ButtonGroup-option.selected {
-    background-color: #888;
+    background-color: var(--grey-1);
     background-image: none;
-    border-color: #888;
-    color: white;
+    border-color: var(--grey-1);
+    color: var(--white);
     pointer-events: none;
     cursor: default;
 }
