--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     position: relative;
     font-family: 'lato';
-    border-right: 1px solid rgba(255,255,255,.15);
+    border-right: 1px solid var(--transparent--lighten);
 }
 
 .CascadingListItem-header {
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     height: 0;
-    background-color: rgba(32, 137, 211, .05);
+    background-color: color(var(--blue) a(5%));
     border-radius: 4px;
     transition: height .25s ease-in-out;
 
