--- a/ui/controls/labeled-icon.reel/default-icon.reel/_default-icon.css
+++ b/ui/controls/labeled-icon.reel/default-icon.reel/_default-icon.css
@@ -7,6 +7,6 @@
     line-height: 48px !important;
     margin-left: auto;
     margin-right: auto;
-    color: white;
+    color: var(--white);
     text-align: center;
 }
