--- a/ui/inspectors/calendar.reel/calendar-list.reel/_calendar-list.css
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/_calendar-list.css
@@ -21,7 +21,7 @@
 
 .CalendarList-emptyState-content {
     display: inline-block;
-    border: 1px solid #bb8e00;
+    border: 1px solid var(--yellow-orange);
     padding: .45em 1em .55em;
     border-radius: 4px;
     margin-top: 1em;
