--- a/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/_alert-notification.css
+++ b/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/_alert-notification.css
@@ -12,4 +12,4 @@
 
 .AlertNotification.has-info:before     { background-color: var(--yellow-orange); }
 .AlertNotification.has-warning:before  { background-color: var(--orange); }
-.AlertNotification.has-critical:before { background-color: #E0003A; }
+.AlertNotification.has-critical:before { background-color: var(--red); }
