--- a/ui/controls/table.reel/_table.css
+++ b/ui/controls/table.reel/_table.css
@@ -14,14 +14,13 @@
 .Table-row.is-pending {
     pointer-events: none;
     opacity: .25;
-    background: green;
-    background: rgba(0,0,0,.5);
+    background: color(var(--black) a(50%));
 
 }
 
 /* Selected Column */
 
-.Table-label-orderBy { background: #093B54; }
+.Table-label-orderBy { background: var(--blue-darken-1); }
 
 /* arrow icon */
 
@@ -33,12 +32,12 @@
     content: "";
     border-left:  .5em solid transparent;
     border-right: .5em solid transparent;
-    border-top:   .5em solid #929E9F;
+    border-top:   .5em solid var(--grey-1);
 }
 
 .Table-reverseSorting .Table-label-orderBy:before {
     border-left:  .5em solid transparent;
     border-right: .5em solid transparent;
-    border-bottom:   .5em solid #929E9F;
+    border-bottom:   .5em solid var(--grey-1);
     border-top: none;
 }
