--- a/ui/controls/tree-view.reel/_tree-view.css
+++ b/ui/controls/tree-view.reel/_tree-view.css
@@ -1,5 +1,5 @@
 .TreeView {
-    border: 1px solid #000;
+    border: 1px solid var(--black);
     border-radius: 4px;
     background-color: var(--grey-blue);
     transition: opacity .25s ease-in-out;
@@ -15,7 +15,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid var(--black);
     background: var(--black);
     color: var(--white);
 }
@@ -75,7 +75,7 @@
     justify-content: space-between;
     padding: .5em;
     background: var(--black);
-    border-top: 1px solid #000;
+    border-top: 1px solid var(--black);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
