--- a/ui/controls/tree-view.reel/current-node.reel/_current-node.css
+++ b/ui/controls/tree-view.reel/current-node.reel/_current-node.css
@@ -68,7 +68,7 @@
 
     & span:first-child {
         font-weight: 400;
-        color: #f0f0f0;
+        color: var(--grey-3);
         margin-bottom: 1rem;
     }
 
