--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -41,13 +41,13 @@
     overflow: hidden;
     position: relative;
     outline: none;
-    background-color: #1E9440;
+    background-color: var(--green);
     color: var(--grey-3);
     background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.15));
     box-shadow: inset 0 1px 0 var(--shadow-1);
     transition: background-color .25s;
 
-    &:hover { background-color: #0E722B; }
+    &:hover { background-color: color(var(--green) shade(15%)); }
 
     & svg {
         width:  1.4em;
@@ -60,7 +60,7 @@
 .Viewer-createButton-plus {
     display: flex;
     margin-right: .5em;
-    color: #ddd;
+    color: var(--grey-3);
 }
 
 .Viewer-createButton-plus {
@@ -77,24 +77,24 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    text-shadow: 0 1px 1px rgba(0,0,0,.3);
+    text-shadow: 0 1px 1px var(--shadow-1);
 }
 
 
 .Viewer-createButton:hover > * { color: var(--white); }
 
 .selected > .Viewer-createButton {
-    background: #2B9CD8;
+    background-color: var(--color-selected);
     cursor: default;
     color: var(--white);
 }
 
 .Viewer-listItem + .Viewer-listItem { border-top: none; }
 
-.Viewer-listItem:hover { background: #fafafa; }
+.Viewer-listItem:hover { background-color: var(--grey-3); }
 
 .Viewer-listItem.selected {
-    background: #1a82eb;
+    background: var(--color-selected);
     cursor: default;
     color: var(--white);
 }
@@ -102,7 +102,7 @@
 /* Empty State */
 .Viewer-emptyState {
     text-align: center;
-    background-color: rgba(47, 50, 51, 1);
+    background-color: var(--grey-1);
     @nest .Viewer.has-items & {
         display: none;
     }
