--- a/ui/dashboard/widget-dropzone.reel/_widget-dropzone.css
+++ b/ui/dashboard/widget-dropzone.reel/_widget-dropzone.css
@@ -28,7 +28,7 @@
     position: relative;
     width:  100%;
     height: 15em;
-    border: 2px dashed #2B9CDF;
+    border: 2px dashed var(--blue-lighten-2);
     border-radius: 4px;
     animation: pulse .5s infinite alternate;
 
