--- a/ui/drawer.reel/_drawer.css
+++ b/ui/drawer.reel/_drawer.css
@@ -79,7 +79,7 @@
         color: var(--main-text-color);
         background: var(--red);
         border-radius: 50%;
-        box-shadow: 0px 0px 3px 4px var(shadow-1);
+        box-shadow: 0px 0px 3px 4px var(--shadow-1);
     }
 }
 
