--- a/ui/icons/disk.reel/_disk.css
+++ b/ui/icons/disk.reel/_disk.css
@@ -33,8 +33,8 @@
 }
 
 .DiskIcon-mediaSize {
-    background: #02658F;
-    color: #C5C5C5;
+    background-color: var(--blue-lighten-1);
+    color: var(--grey-3);
     font-size: .7em;
     border-bottom-left-radius:  2px;
     border-bottom-right-radius: 2px;
@@ -61,7 +61,7 @@
     text-align: center;
     font-size: .7em;
     padding: 0 .15em .1em;
-    background: var(--orange);
+    background: var(--orange-lighten-2);
     border-radius: .25em;
     color: var(--white);
     margin-bottom: .15em;
@@ -77,7 +77,7 @@
     right: -.5em;
     height: 1.2em;
     width:  1.2em;
-    color: #D78F2A;
+    color: var(--orange);
 
     & svg {
         height: 1.2em;
