--- a/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
@@ -65,7 +65,7 @@
     padding: 0 1rem;
     margin-right: .5rem;
     border-radius: 4px;
-    border: 0;
+    border: none;
     outline: none;
 }
 
