--- a/ui/sign-in.reel/_sign-in.css
+++ b/ui/sign-in.reel/_sign-in.css
@@ -10,8 +10,8 @@
     left:   0;
     right:  0;
     bottom: 0;
-    background-color: #000;
-    background-image: radial-gradient(rgba(43, 156, 216,.3),rgba(0,0,0,.5) 50%);
+    background-color: var(--black);
+    background-image: radial-gradient(color(var(--color-selected) a(30%)), color(var(--black) a(50%)) 50%);
     background-repeat: no-repeat;
     background-position: center;
     z-index: 1000;
