cleans up list item

--- a/ui/controls/list.reel/list-item.reel/_list-item.css
+++ b/ui/controls/list.reel/list-item.reel/_list-item.css
@@ -26,11 +26,12 @@
     background: var(--color-selected);
     cursor: default;
     color: var(--main-text-color);
+    border-color: transparent;
 
-    @nest .CascadingListItem:not(:nth-last-child(2)) & {
+    /* @nest .CascadingListItem:not(:nth-last-child(2)) & {
         background:     color(var(--color-selected) shade(15%));
         border-color:   color(var(--color-selected) shade(15%));
-    }
+    } */
 }
 
 .ListItem + .ListItem,
