--- a/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/_main-navigation-item.css
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/_main-navigation-item.css
@@ -18,7 +18,7 @@
 .MainNavigationItem.selected {
     color: var(--white);
     text-shadow: 0 1px 0 rgba(0,0,0,.5);
-    background: var(--color-selected);
+    background-color: var(--color-selected);
 }
 
 @media (min-height: 40em) {
