--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
@@ -44,7 +44,7 @@
     text-overflow: ellipsis;
     font-size: 1em;
     font-weight: 400;
-    text-shadow: 0 1px rgba(0,0,0,.2);
+    text-shadow: 0 1px var(--shadow-1);
 }
 
 .CascadingListItem-content {
