--- a/ui/controls/topology.reel/vdev.reel/_vdev.css
+++ b/ui/controls/topology.reel/vdev.reel/_vdev.css
@@ -47,10 +47,11 @@
 .Vdev .LabeledIcon-title {
     /* overrides removing the container icon label */
     display: block !important;
+    color: var(--main-text-color);
 }
 
 .Vdev-grid {
-    background: var(--grey-1);
+    background: var(--grey-blue);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     box-shadow: 0 1px 1px var(--shadow-1);
@@ -72,7 +73,7 @@ Vdev Title
     position: relative;
     order: -1;
     text-align: left;
-    background: var(--grey-1);
+    background: var(--black);
     border-top-right-radius: 4px;
     border-top-left-radius:  4px;
     padding: 0 .25em;
