--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -44,7 +44,6 @@
     background-color: var(--green);
     color: var(--grey-3);
     background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.15));
-    box-shadow: inset 0 1px 0 var(--shadow-1);
     transition: background-color .25s;
 
     &:hover { background-color: color(var(--green) shade(15%)); }
@@ -102,7 +101,7 @@
 /* Empty State */
 .Viewer-emptyState {
     text-align: center;
-    background-color: var(--grey-1);
+    background-color: var(--grey);
     @nest .Viewer.has-items & {
         display: none;
     }
