Add guest health status light to VMs
Ticket: #20545

--- a/ui/sections/vms/inspectors/virtual-machine.reel/_virtual-machine.css
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/_virtual-machine.css
@@ -10,4 +10,8 @@
     }
 }
 
+.VirtualMachine-guestHealthStatus {
+    float: left;
+}
+
 .VirtualMachine.has-actions .VirtualMachine-actions { display: flex; }
