--- a/components/widgets/tasks-widget/task-entry/task-entry.html
+++ b/components/widgets/tasks-widget/task-entry/task-entry.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="/bower_components/polymer/polymer.html">
+<link rel="import" href="/bower_components/paper-progress/paper-progress.html">
 <dom-module id="task-entry">
     <template>
         <style>
