preparatory work for using the streaming response with the list

--- a/ui/controls/list.reel/_list.css
+++ b/ui/controls/list.reel/_list.css
@@ -6,3 +6,9 @@
     height: 4rem;
     margin: 2rem 0;
 }
+
+.ListItem .dummy {
+    position: absolute;
+    margin: -1000px;
+    z-index: -1000;
+}
